[gd_scene load_steps=6 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Worker.tscn" type="PackedScene" id=3]
[ext_resource path="res://House.tscn" type="PackedScene" id=4]
[ext_resource path="res://Factory.tscn" type="PackedScene" id=5]

[node name="World" type="Node2D" groups=[
"world",
]]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 2 )

[node name="Worker" parent="." groups=[
"workers",
] instance=ExtResource( 3 )]
position = Vector2( 60, 50 )

[node name="Worker2" parent="." groups=[
"workers",
] instance=ExtResource( 3 )]
position = Vector2( 60, 140 )
_name = "b"

[node name="Worker3" parent="." groups=[
"workers",
] instance=ExtResource( 3 )]
position = Vector2( 60, 230 )
_name = "c"

[node name="House" parent="." groups=[
"houses",
] instance=ExtResource( 4 )]
position = Vector2( 157, 70 )

[node name="House3" parent="." groups=[
"houses",
] instance=ExtResource( 4 )]
position = Vector2( 157, 150 )

[node name="House9" parent="." groups=[
"houses",
] instance=ExtResource( 4 )]
position = Vector2( 160, 320 )

[node name="Factory" parent="." groups=[
"factories",
] instance=ExtResource( 5 )]
position = Vector2( 270, 70 )
_salary = 8.0

[node name="Factory8" parent="." groups=[
"factories",
] instance=ExtResource( 5 )]
position = Vector2( 270, 320 )
_salary = 4.0

[node name="Factory3" parent="." groups=[
"factories",
] instance=ExtResource( 5 )]
position = Vector2( 270, 150 )
_salary = 4.0

[node name="Factory10" parent="." groups=[
"factories",
] instance=ExtResource( 5 )]
position = Vector2( 370, 130 )
_salary = 6.0

[node name="Factory4" parent="." groups=[
"factories",
] instance=ExtResource( 5 )]
position = Vector2( 270, 240 )
_salary = 4.0

[node name="TimerShortHomeless" type="Timer" parent="."]
autostart = true

[node name="Limits" type="Line2D" parent="."]
position = Vector2( 0, -50 )
points = PoolVector2Array( 0, 50, 0, 1050, 2000, 1050, 2000, 50, 0, 50 )
default_color = Color( 0.784314, 0.784314, 1, 1 )
texture_mode = 3801188

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ButtonDown" type="Button" parent="HUD"]
margin_left = 770.0
margin_top = 140.0
margin_right = 820.0
margin_bottom = 170.0
text = "Down"

[node name="ButtonUp" type="Button" parent="HUD"]
margin_left = 770.0
margin_top = 60.0
margin_right = 820.0
margin_bottom = 90.0
text = "Up"

[node name="ButtonLeft" type="Button" parent="HUD"]
margin_left = 720.0
margin_top = 100.0
margin_right = 770.0
margin_bottom = 130.0
text = "Left"

[node name="ButtonRight" type="Button" parent="HUD"]
margin_left = 820.0
margin_top = 100.0
margin_right = 870.0
margin_bottom = 130.0
text = "Right"

[node name="ButtonZoomIn" type="Button" parent="HUD"]
margin_left = 640.0
margin_top = 30.0
margin_right = 720.0
margin_bottom = 60.0
text = "Zoom in"

[node name="ButtonZoomOut" type="Button" parent="HUD"]
margin_left = 870.0
margin_top = 30.0
margin_right = 950.0
margin_bottom = 60.0
text = "Zoom out"
[connection signal="timeout" from="TimerShortHomeless" to="." method="_on_TimerShortHomeless_timeout"]
[connection signal="button_down" from="HUD/ButtonDown" to="Camera2D" method="_on_ButtonDown_button_down"]
[connection signal="button_up" from="HUD/ButtonDown" to="Camera2D" method="_on_ButtonDown_button_up"]
[connection signal="button_down" from="HUD/ButtonUp" to="Camera2D" method="_on_ButtonUp_button_down"]
[connection signal="button_up" from="HUD/ButtonUp" to="Camera2D" method="_on_ButtonUp_button_up"]
[connection signal="button_down" from="HUD/ButtonLeft" to="Camera2D" method="_on_ButtonLeft_button_down"]
[connection signal="button_up" from="HUD/ButtonLeft" to="Camera2D" method="_on_ButtonLeft_button_up"]
[connection signal="button_down" from="HUD/ButtonRight" to="Camera2D" method="_on_ButtonRight_button_down"]
[connection signal="button_up" from="HUD/ButtonRight" to="Camera2D" method="_on_ButtonRight_button_up"]
[connection signal="pressed" from="HUD/ButtonZoomIn" to="Camera2D" method="_on_ButtonZoomIn_pressed"]
[connection signal="pressed" from="HUD/ButtonZoomOut" to="Camera2D" method="_on_ButtonZoomOut_pressed"]
